syntax = "proto3";

package auth;

option go_package = "./pb";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 3;
  string password = 4;
}

message AuthResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string token = 4;
}

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse) {}
  rpc SignUp(RegisterRequest) returns (AuthResponse) {}
}